# visenten

./: .bashrc  .gitignore  CMakeLists.txt  Makefile  bad.sql  build-tags.sh  check_for_error  es_input.cfg  intos.sql  sql.l  sql.ypp  testsql
boot/: config.txt
home/martin/: .profile
opt/retropie/configs/all/retroarch/autoconfig/: DragonRise Inc.   Generic   USB  Joystick  .cfg
src/: CMakeLists.txt  ast.hpp  parse_tree.cpp  parse_tree.hpp  sql.l  sql.ypp
test/: bad.sql  good.sql  test_parser.sh
